--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,7 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+monitor_dtr = 0
+monitor_rts = 0
 lib_deps =
     fastled/FastLED@^3.8.0
