--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,32 @@ monitor_dtr = 0
 monitor_rts = 0
 lib_deps =
     fastled/FastLED@^3.8.0
+    bodmer/TFT_eSPI@^2.5.43
+build_flags =
+    -Os
+    -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+    ;The User_Setup_Select.h file will not load the user setting header files if
+    ;USER_SETUP_LOADED is defined.
+    -DUSER_SETUP_LOADED=1 
+
+    ; Define the TFT driver, pins etc. here:
+    -DST7789_DRIVER=1
+    -DTFT_WIDTH=240
+    -DTFT_HEIGHT=240
+    -DTFT_MISO=12
+    -DTFT_MOSI=13
+    -DTFT_SCLK=14
+    -DTFT_CS=5
+    -DTFT_DC=0
+    -DTFT_RST=2
+    ;-DTFT_BL=15
+    ;-DTOUCH_CS=22
+    -DLOAD_GLCD=1
+    -DLOAD_FONT2=1
+    -DLOAD_FONT4=1
+    -DLOAD_FONT6=1
+    -DLOAD_FONT7=1
+    -DLOAD_FONT8=1
+    -DLOAD_GFXFF=1
+    -DSMOOTH_FONT=1
+    -DSPI_FREQUENCY=40000000
