--- a/platformio.ini
+++ b/platformio.ini
@@ -28,14 +28,18 @@ build_flags =
     -DST7789_DRIVER=1
     -DTFT_WIDTH=240
     -DTFT_HEIGHT=240
-    -DTFT_MISO=12
+    ; -DTFT_MISO=12
+    ; -DTFT_MOSI=13
+    -DTFT_MISO=-1
     -DTFT_MOSI=13
     -DTFT_SCLK=14
-    -DTFT_CS=5
+    ; -DTFT_CS=16
     -DTFT_DC=0
     -DTFT_RST=2
-    ;-DTFT_BL=15
-    ;-DTOUCH_CS=22
+    ; -DTFT_SPI_MODE=SPI_MODE3
+    -DTFT_BL=5
+    -DTFT_BACKLIGHT_ON=LOW
+    -DTOUCH_CS=-1
     -DLOAD_GLCD=1
     -DLOAD_FONT2=1
     -DLOAD_FONT4=1
